[package]
name = "dawn-stdlib"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawn-crypto = { path = "../dawn-crypto" }
hex = { version = "*" }
serde = { version="*", features = ["derive"] }
serde_json = { version = "*" }
