[package]
name = "dawn-stdlib"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawn-crypto = { path = "../dawn-crypto" }
hex = { version = "*" }
base64 = { version = "*" }
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = { version = "*" }
